--- a/info.html
+++ b/info.html
@@ -76,7 +76,7 @@
         }
 
         fetchPledgeAmount();
-        setInterval(fetchPledgeAmount, 60000); // Refresh every minute
+        setInterval(fetchPledgeAmount, 10000); // Refresh every 10 seconds
     </script>
 </body>
 </html>
