--- a/info.html
+++ b/info.html
@@ -41,9 +41,9 @@
     <h2>Fundraising Thermometer</h2>
     <div class="thermometer-container">
         <div class="fill" id="fill" style="height: 0;"></div>
-        <div class="milestone" style="bottom: 57%">$75K - Bathrooms</div>
-        <div class="milestone" style="bottom: 81%">$105K - Lobby Flooring</div>
-        <div class="milestone" style="bottom: 100%">$130K - Main Doors</div>
+        <div class="milestone" style="bottom: 57%" id="milestone-75">$75K - Bathrooms</div>
+        <div class="milestone" style="bottom: 81%" id="milestone-105">$105K - Lobby Flooring</div>
+        <div class="milestone" style="bottom: 100%" id="milestone-130">$130K - Main Doors</div>
     </div>
     <h3 id="amount-raised">Raised: $0</h3>
     <script>
@@ -99,35 +99,6 @@
             setTimeout(() => {
                 milestone.style.transform = "scale(1)";
             }, 1000);
-        }
-
-        fetchPledgeAmount();
-        setInterval(fetchPledgeAmount, 10000); // Refresh every 10 seconds
-    </script>
-</body>
-</html>
-
-        async function fetchPledgeAmount() {
-            try {
-                const response = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${RANGE}?key=${API_KEY}`);
-                const data = await response.json();
-                let amountRaised = parseInt(data.values[0][0]) || 0;
-                updateThermometer(amountRaised);
-            } catch (error) {
-                console.error("Error fetching data:", error);
-            }
-        }
-
-        function updateThermometer(amountRaised) {
-            document.getElementById("amount-raised").innerText = `Raised: $${amountRaised.toLocaleString()}`;
-            let percentage = Math.min((amountRaised / totalGoal) * 100, 100);
-            document.getElementById("fill").style.height = percentage + "%";
-            
-            if (amountRaised >= 75000) triggerAnimation();
-        }
-
-        function triggerAnimation() {
-            confetti({ particleCount: 100, spread: 70, origin: { y: 0.6 } });
         }
 
         fetchPledgeAmount();
