--- a/info.html
+++ b/info.html
@@ -88,7 +88,7 @@
             <h2 id="amount-raised">Raised: $0</h2>
         </div>
         <div class="qr-container">
-            <img src="Al Iman 2025 QR Code.png" alt="Donate QR Code">
+            <img src="qr.png" alt="Donate QR Code">
             <p>Scan to Donate to Al-Iman's Renovation</p>
             <a href="https://www.alimanschool.org" target="_blank" style="color: yellow; text-decoration: none; font-size: 1.3em;">Visit Al-Iman School</a>
         </div>
