--- a/info.html
+++ b/info.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Al-Iman School Fundraiser</title>
   <style>
     body {
@@ -42,40 +42,20 @@
       margin: 2rem auto;
     }
 
-    /* The fill that grows */
+    /* Fills dynamically */
     .fill {
       width: 100%;
       position: absolute;
       bottom: 0;
       background: red;
-      height: 0%; /* updated dynamically */
+      height: 0%; /* updated by JS */
       transition: height 1s ease-in-out;
     }
 
-    /* Tick marks on the thermometer itself */
-    .tick {
-      position: absolute;
-      left: 0;
-      width: 100%;
-      height: 2px;       /* thickness of the tick line */
-      background: #111;  /* dark line; can adjust to white if preferred */
-      opacity: 0.7;
-    }
-    /* Place each tick at matching milestone % from bottom */
-    .tick-75 {
-      bottom: 57%;
-    }
-    .tick-105 {
-      bottom: 81%;
-    }
-    .tick-130 {
-      bottom: 100%;
-    }
-
-    /* Milestone Labels to the right */
+    /* Milestone Markers */
     .milestone {
       position: absolute;
-      left: 130%;
+      left: 108%; /* Closer so they're visible on narrower screens */
       font-weight: bold;
       background: #333;
       padding: 8px;
@@ -83,7 +63,10 @@
       color: white;
       white-space: nowrap;
       border: 1px solid white;
+      max-width: 180px; /* So text wraps if needed */
+      text-align: left;
     }
+    /* Each milestone's position from bottom. Tweak if needed. */
     .milestone-75 {
       bottom: 57%;
     }
@@ -94,14 +77,15 @@
       bottom: 100%;
     }
 
-    /* Descriptions */
+    /* Milestone Descriptions (the “rewards”) */
     .milestone-desc {
       position: absolute;
-      left: 135%;
-      font-size: 1em;
+      left: 108%;
+      font-size: 0.85em;
       color: white;
-      width: 250px;
+      max-width: 180px;
       text-align: left;
+      margin-top: 35px; /* Creates separation below the milestone label */
     }
     .desc-75 {
       bottom: 57%;
@@ -113,6 +97,7 @@
       bottom: 100%;
     }
 
+    /* Raised amount */
     #raised-amount {
       font-size: 1.2rem;
       margin-top: 1rem;
@@ -127,15 +112,9 @@
   <div class="main">
     <!-- Thermometer -->
     <div class="thermometer-container">
-      <!-- Fill -->
       <div class="fill" id="fill"></div>
 
-      <!-- Tick Marks -->
-      <div class="tick tick-75"></div>
-      <div class="tick tick-105"></div>
-      <div class="tick tick-130"></div>
-
-      <!-- Milestone Labels -->
+      <!-- Milestones -->
       <div class="milestone milestone-75">$75K - Bathrooms</div>
       <div class="milestone-desc desc-75">Renovate all student & staff bathrooms</div>
 
@@ -145,22 +124,20 @@
       <div class="milestone milestone-130">$130K - Main Doors</div>
       <div class="milestone-desc desc-130">Install new, secure main entrance doors</div>
     </div>
-    <!-- Display the raised amount -->
+    <!-- Shows the raised amount -->
     <div id="raised-amount">Raised: $0</div>
   </div>
 
   <script>
-    // EDIT THESE CONSTANTS TO MATCH YOUR SETUP
-    const SHEET_ID = "1-fSrx0AvnWW6YGm-cEiQBxyJbhtLRcNN-DkOYGpPcVo"; // Your sheet's ID
-    const RANGE = "C7"; // The cell that holds the total pledge amount
-    const API_KEY = "AIzaSyAg_99VENYguMLyON5J9ALx7T8C4G3lLYE"; // Replace with your Google Sheets API key
-    const TOTAL_GOAL = 130000; // The total fundraising goal
+    // Replace with your values:
+    const SHEET_ID = "1-fSrx0AvnWW6YGm-cEiQBxyJbhtLRcNN-DkOYGpPcVo";
+    const RANGE = "C7";
+    const API_KEY = "AIzaSyAg_99VENYguMLyON5J9ALx7T8C4G3lLYE";
+    const TOTAL_GOAL = 130000;
 
     async function fetchPledgeAmount() {
       try {
-        const response = await fetch(
-          `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${RANGE}?key=${API_KEY}`
-        );
+        const response = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${RANGE}?key=${API_KEY}`);
         const data = await response.json();
 
         let amountRaised = 0;
@@ -181,19 +158,20 @@
       let ratio = amountRaised / TOTAL_GOAL;
       if (ratio > 1) ratio = 1;
 
-      // Convert ratio to a percentage
+      // Convert ratio -> percent
       const heightPercent = ratio * 100;
 
-      // Update fill
+      // Fill bar
       fillElement.style.height = heightPercent + "%";
 
-      // Update displayed total
+      // Show amount
       raisedAmountElement.textContent = `Raised: $${amountRaised.toLocaleString()}`;
     }
 
-    // Fetch on page load
+    // Initial fetch
     fetchPledgeAmount();
-    // setInterval(fetchPledgeAmount, 60000); // optional auto-refresh
+    // Refresh every 5 seconds (12x faster than 60s)
+    setInterval(fetchPledgeAmount, 5000);
   </script>
 </body>
 </html>
